--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
+    "react-resizable-panels": "^2.0.22",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.15.1",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
